src/test/ui/feature-gates/feature-gate-label_break_value.stderr
error[E0658]: labels on blocks are unstable (see issue #48594)
  --> $DIR/feature-gate-label_break_value.rs:2:5
   |
LL |     'a: {
   |     ^^
   |
   = help: add #![feature(label_break_value)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
