src/test/ui/feature-gates/feature-gate-label_break_value.rs
pub fn main() {
    'a: { //~ ERROR labels on blocks are unstable
        break 'a;
    }
}
